@@ -17,3 +17,8 @@
 {
 }
 @end
+
+@interface Parallax2 : ParallaxDemo
+{
+}
+@end
